feat: letter overrides
- added one per letter variable overrides
